--- a/index.html
+++ b/index.html
@@ -1,1 +1,265 @@
-<h1> I am so done with this </h1>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+
+#accordion input {
+	display: none;
+}
+#accordion label {
+  font-size: 25px;
+	background: yellow;
+	border-radius: .25em;
+	cursor: pointer;
+	display: block;
+	margin-bottom: .125em;
+	padding: .25em 1em;
+	z-index: 20;
+  width: 48%
+
+}
+#accordion label:hover {
+	background: powderblue;
+}
+
+#accordion input:checked + label {
+	background: yellow;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
+	color: black;
+	margin-bottom: 0;
+  width: 48%;
+  font-size: 25px;
+}
+#accordion article {
+	background: LemonChiffon;
+	height:0px;
+	overflow:hidden;
+	z-index:10;
+  width: 51%;
+  font-size: 20px;
+}
+#accordion article p {
+	padding: 1em;
+}
+#accordion input:checked article {
+}
+#accordion input:checked ~ article {
+	border-bottom-left-radius: .25em;
+	border-bottom-right-radius: .25em;
+	height: auto;
+	margin-bottom: .125em;
+  font-size: 20px;
+}
+
+#accordion2 input {
+	display: none;
+}
+#accordion2 label {
+  font-size: 25px;
+	background: yellow;
+	border-radius: .25em;
+	cursor: pointer;
+	display: block;
+	margin-bottom: .125em;
+	padding: .25em 1em;
+	z-index: 20;
+  width: 48%
+
+}
+#accordion2 label:hover {
+	background: powderblue;
+}
+
+#accordion2 input:checked + label {
+	background: yellow;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
+	color: black;
+	margin-bottom: 0;
+  width: 48%;
+  font-size: 25px;
+}
+#accordion2 article {
+	background: LemonChiffon;
+	height:0px;
+	overflow:hidden;
+	z-index:10;
+  width: 51%;
+  font-size: 20px;
+}
+#accordion2 article p {
+	padding: 1em;
+}
+#accordion2 input:checked article {
+}
+#accordion2 input:checked ~ article {
+	border-bottom-left-radius: .25em;
+	border-bottom-right-radius: .25em;
+	height: auto;
+	margin-bottom: .125em;
+  font-size: 20px;
+}
+
+a:link, a:visited {
+  background-color: Yellow;
+  color: black;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
+}
+a:hover, a:active {
+  background-color: powderblue;
+}
+h1 {
+  font-size: 50px;
+  text-align: center;
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: yellow;
+}
+h2 {
+  font-size: 50px;
+  text-align: center;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: yellow;
+}
+body{
+  background-image: url(purpleback.jpg);
+  background-position: 100% 100%;
+  background-repeat: repeat-y;
+
+}
+h3 {
+  font-size: 45px;
+  color: yellow;
+}
+table{
+  width: 150%;
+  border: 1px solid black;
+  border-collapse: collapse;
+  }
+  th{
+    background-color: yellow;
+    text-align: center;
+    font-size: 25px;
+    }
+    td {
+      color: yellow;
+  text-align: center;
+  font-size: 20px;
+}
+th, td {
+
+  padding: 15px;
+}
+img {
+  background: url(heroimage.jpg) no-repeat center;
+  background-size: cover;
+  width: 100%;
+  height: 500px;
+  position: relative;
+}
+li {
+  color: yellow;
+  font-size: 25px;
+
+}
+</style>
+</head>
+<body>
+  <img src="heroimage.jpg"
+  alt="me" class="center" width="400" height="200">
+<h1><b><center>Paxton Fleeger</center></b></h1>
+<br></br>
+<h2>Aspiring Game Designer</h2>
+
+  <br></br>
+  <a href="https://www.verizonwireless.com/" target="_blank"><center>Phone: 480-391-9873</center></a>
+  <br></br>
+  <a href="https://www.scottsdaleaz.gov/" target="_blank"><center>Address: 11872 E. Becker Ln.</center></a>
+  <br></br>
+  <a href="https://www.google.com/" target="_blank"><center>Email: PaxtonFleeger@gmail.com</center></a>
+<h3><i>Objective Education</i></h3>
+  <table style="width:50%">
+    <tr>
+      <th>School</th>
+      <th>Years</th>
+      <th>GPA</th>
+    </tr>
+    <tr>
+      <td>Desert Mountain Highschool</td>
+      <td>2012 - 2016</td>
+      <td>3.8</td>
+    </tr>
+    <tr>
+      <td>Arizona State University</td>
+      <td>2016 - Present</td>
+      <td>3.1</td>
+    </tr>
+  </table>
+
+<h3><i>Experience</i></h3>
+<section id="accordion">
+    <div>
+      <input type="checkbox" id="check-1" />
+      <label for="check-1">Adobe Creative Cloud Softwares</label>
+      <article>
+        <p>Photoshop, After Effects, Premiere, Lightroom, Animate</p>
+      </article>
+    </div>
+    <div>
+      <input type="checkbox" id="check-2" />
+      <label for="check-2">Game Engines</label>
+      <article>
+        <p>Unity, Unreal, Gamemaker, Monogame, and RPG Maker</p>
+      </article>
+    </div>
+    <div>
+      <input type="checkbox" id="check-3" />
+      <label for="check-3">Programming</label>
+      <article>
+        <p>HTML, CSS, JavaScript, Java, C++, C#, Python</p>
+      </article>
+    </div>
+    <div>
+      <input type="checkbox" id="check-4" />
+      <label for="check-4">Customer Service</label>
+      <article>
+        <p>Serving, Cashering, Delievery Driving, Bartending</p>
+      </article>
+    </div>
+  </section>
+
+<h3><i>References</i></h3>
+<section id="accordion2">
+    <div>
+      <input type="checkbox" id="check-5" />
+      <label for="check-5">Kelan Cekay</label>
+      <article>
+        <p>Spinato's Manager (480-334-5583)</p>
+      </article>
+    </div>
+    <div>
+      <input type="checkbox" id="check-6" />
+      <label for="check-6">Chris Prisel</label>
+      <article>
+        <p>Contract Employer (602-448-3399)</p>
+      </article>
+    </div>
+    <div>
+      <input type="checkbox" id="check-7" />
+      <label for="check-7">Jonathan Song</label>
+      <article>
+        <p>Buissness Partner (480-893-3378)</p>
+      </article>
+    </div>
+  </section>
+
+</body>
