--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ h2 {
   color: yellow;
 }
 body{
-  background-image: url(purpleback.jpg);
+  background-image: url(https://www.publicdomainpictures.net/pictures/30000/velka/solid-purple-background.jpg);
   background-position: 100% 100%;
   background-repeat: repeat-y;
 
@@ -174,7 +174,7 @@ li {
 </style>
 </head>
 <body>
-  <img src="heroimage.jpg"
+  <img src="https://www.publicdomainpictures.net/pictures/30000/velka/solid-purple-background.jpg"
   alt="me" class="center" width="400" height="200">
 <h1><b><center>Paxton Fleeger</center></b></h1>
 <br></br>
